--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animations: ^2.0.3
   connectivity_plus: ^2.3.2
   cupertino_icons: ^1.0.2
   flex_color_scheme: ^5.0.1
