--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,9 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^3.0.1
+  http: ^0.13.4
   iconsax: ^0.0.8
+  liquid_pull_to_refresh: ^3.0.1
   sizer: ^2.0.15
   stacked_themes: ^0.3.8+1
 
